--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ul>
             <!-- /.left-sidebar_menu -->
             <div class="left-sidebar_object">
-              <img src="img/left-sidebar/object.jpg" alt="Фото объекта">
+              <img src="img/img.jpg" alt="Фото объекта">
               <div class="left-sidebar_object-description">
                 <h3>Жилой комплекс в г. Москва</h3>
                 <p>190-квартирный 12-этажный жилой дом № 88 по ул. Ленина в микрорайоне Центральный...</p>
@@ -69,7 +69,7 @@
             </div>
             <!-- /.left-sidebar_object -->
             <div class="left-sidebar_object">
-              <img src="img/left-sidebar/object.jpg" alt="Фото объекта">
+              <img src="img/img.jpg" alt="Фото объекта">
               <div class="left-sidebar_object-description">
                 <h3>Жилой комплекс в г. Москва</h3>
                 <p>190-квартирный 12-этажный жилой дом № 88 по ул. Ленина в микрорайоне Центральный...</p>
@@ -92,19 +92,19 @@
           <div class="directions">
             <h2>Направления деятельности</h2>
             <div class="direction-blocks">
-              <div class="directions-block" style="background-image: url(img/directions/slider.jpg);">
+              <div class="directions-block" style="background-image: url(img/img.jpg);">
                 <h3>Девелоперские проекты</h3>
               </div>
-              <div class="directions-block" style="background-image: url(img/directions/slider.jpg);">
+              <div class="directions-block" style="background-image: url(img/img.jpg);">
                 <h3>Продажа недвижемости</h3>
               </div>
-              <div class="directions-block" style="background-image: url(img/directions/slider.jpg);">
+              <div class="directions-block" style="background-image: url(img/img.jpg);">
                 <h3>Строительство</h3>
               </div>
-              <div class="directions-block" style="background-image: url(img/directions/slider.jpg);">
+              <div class="directions-block" style="background-image: url(img/img.jpg);">
                 <h3>Инвестиционные программы</h3>
               </div>
-              <div class="directions-block" style="background-image: url(img/directions/slider.jpg);">
+              <div class="directions-block" style="background-image: url(img/img.jpg);">
                 <h3>Строительство</h3>
               </div>
             </div>
@@ -115,6 +115,61 @@
       <!-- /.row -->
     </div>
     <!-- /.container -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="copy">
+              <p>Copyright c 2014-2017</p>
+              <a class="footer-policy-link" href="#">Политика конфидициальности</a>
+              <small>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Меня от всех первую оксмокс! Текстами, снова необходимыми. Диких, безопасную! Одна ручеек ведущими, переулка о имеет коварных рот деревни океана текст?</small>
+            </div>
+          </div>
+          <!-- /.col-md -->
+          <div class="col-md-2">
+            <ul class="footer_menu">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Окомпании</a></li>
+              <li><a href="#">наши услуги</a></li>
+              <li><a href="#">Структура</a></li>
+              <li><a href="#">инвесторам</a></li>
+              <li><a href="#">контакты</a></li>
+            </ul>
+          </div>
+          <!-- /.col-md -->
+          <div class="col-md">
+            <ul class="footer_menu">
+              <li><a href="#">Земля</a></li>
+              <li><a href="#">Жилая недвижимость</a></li>
+              <li><a href="#">Коммерческая недвижимость</a></li>
+              <li><a href="#">Новостройки</a></li>
+              <li><a href="#">Дома/Коттеджи</a></li>
+              <li><a href="#">Строительство</a></li>
+              <li><a href="#">Аренда</a></li>
+            </ul>
+          </div>
+          <!-- /.col-md -->
+          <div class="col-md">
+            <div class="footer-contacts">
+              <p class="footer-contacts_phone">8 (800) 850-50-50</p>
+              <p class="footer-contacts_address">г. Москва, ул. Морозова, д.12, 3 этаж</p>
+              <p class="footer-contacts_address">г. Москва, ул. Ленина, д.23, офис 2</p>
+              <p class="footer-contacts_email">email@email.ru</p>
+            </div>
+            <div class="footer-social-links">
+              <ul>
+                <li><a href="#"><i class="icon-vkontakte"></i></a></li>
+                <li><a href="#"><i class="icon-facebook"></i></a></li>
+                <li><a href="#"><i class="icon-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- /.col-md -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.slim.min.js"><\/script>')</script>
     <script src="slick/slick.js"></script>
