--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div class="container">
       <div class="top-nav">
         <div class="row justify-content-between align-items-center">
-          <div class="col-md-auto">
+          <div class="col-lg-3">
             <div class="logo">
               <img src="img/logo.png" alt="Логотип">
             </div>
           </div>
-          <div class="col-md-auto">
+          <div class="col-lg-9">
             <button class="top-nav_btn">
               <i class="icon-menu"></i>
             </button>
@@ -50,7 +50,7 @@
       </div>
       <!-- /.top-nav -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-6">
           <div class="left-sidebar">
             <div class="left-sidebar_btn">
               Категории
@@ -86,7 +86,7 @@
           </div>
         </div>
         <!-- /.col-md-4 -->
-        <div class="col-md-8">
+        <div class="col-lg-8 col-md-6">
           <div class="content">
             <h2>СтройИнвест</h2>
             <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит продолжил дороге даже ведущими от всех, гор что переписали правилами но эта заглавных если раз вопроса заголовок лучше страна! Проектах города заманивший языкового жаренные они, имени ведущими ему предупредила грустный маленькая залетают пустился но первую правилами моей деревни рыбного что, рукопись всеми, дорогу строчка собрал назад приставка? До ты большого маленький вопрос лучше, реторический своих приставка? Строчка предупреждал о текста.</p>
@@ -124,7 +124,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="copy">
               <p>Copyright c 2014-2017</p>
               <a class="footer-policy-link" href="#">Политика конфидициальности</a>
@@ -132,7 +132,7 @@
             </div>
           </div>
           <!-- /.col-md -->
-          <div class="col-md-2 col-6">
+          <div class="col-lg-2 col-6">
             <ul class="footer_menu">
               <li><a href="#">Главная</a></li>
               <li><a href="#">Окомпании</a></li>
@@ -143,7 +143,7 @@
             </ul>
           </div>
           <!-- /.col-md -->
-          <div class="col-md col-6">
+          <div class="col-lg col-6">
             <ul class="footer_menu">
               <li><a href="#">Земля</a></li>
               <li><a href="#">Жилая недвижимость</a></li>
@@ -155,7 +155,7 @@
             </ul>
           </div>
           <!-- /.col-md -->
-          <div class="col-md">
+          <div class="col-lg">
             <div class="footer-contacts">
               <p class="footer-contacts_phone">8 (800) 850-50-50</p>
               <p class="footer-contacts_address">г. Москва, ул. Морозова, д.12, 3 этаж</p>
@@ -187,7 +187,14 @@
         slidesToScroll: 1,
         responsive: [
           {
-            breakpoint: 767,
+            breakpoint: 1200,
+            settings: {
+              slidesToShow: 3,
+              slidesToScroll: 1
+            }
+          },
+          {
+            breakpoint: 991,
             settings: {
               slidesToShow: 1,
               slidesToScroll: 1
