сделал блоки about, contacts, organization

--- a/about.html
+++ b/about.html
@@ -88,13 +88,33 @@
         <!-- /.col-md-4 -->
         <div class="col-lg-8">
           <div class="content">
-            <h2>СтройИнвест</h2>
-            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит продолжил дороге даже ведущими от всех, гор что переписали правилами но эта заглавных если раз вопроса заголовок лучше страна! Проектах города заманивший языкового жаренные они, имени ведущими ему предупредила грустный маленькая залетают пустился но первую правилами моей деревни рыбного что, рукопись всеми, дорогу строчка собрал назад приставка? До ты большого маленький вопрос лучше, реторический своих приставка? Строчка предупреждал о текста.</p>
-            <p>От всех сих семь жизни. Переписывается, раз буквенных продолжил своих решила рот проектах, города ему инициал знаках запятых текстов lorem, грустный выйти имеет домах там над встретил. Живет, продолжил приставка ее рыбного знаках заманивший послушавшись домах бросил повстречался вдали безопасную? Назад, lorem переписали, напоивший текста даже наш моей великий бросил проектах большой буквенных эта не, путь дорогу заголовок осталось дороге! Над, города языком. Обеспечивает запятых рыбными дороге предупреждал заголовок рукописи проектах.</p>
-            <p>Океана своих текст решила, там моей взобравшись возвращайся переулка города власти точках великий, коварных курсивных за. Безорфографичный предупредила эта решила взгляд своего путь диких последний. Силуэт, свое образ, не переулка своих курсивных свой эта они гор однажды, взобравшись бросил букв. Семь, дал меня, текста назад взобравшись необходимыми деревни коварных пустился о силуэт предложения это до одна всемогущая жаренные заголовок своих дорогу. Там, своего мир! Ручеек живет всемогущая подзаголовок грамматики заголовок.</p>
+            <h2>О компании</h2>
+            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит продолжил дороге даже ведущими от всех, гор что переписали правилами но эта заглавных если раз вопроса заголовок лучше страна! Проектах города заманивший языкового жаренные они, имени ведущими ему предупредила грустный маленькая залетают пустился но первую правилами моей деревни рыбного что, рукопи.</p>
+            <p>От всех сих семь жизни. Переписывается, раз буквенных продолжил своих решила рот проектах, города ему инициал знаках запятых текстов lorem, грустный выйти имеет домах там над встретил. Живет, продолжил приставка ее рыбного знаках заманивший послушавшись домах бросил повстречался вдали безопасную? Назад, lorem переписали, напоивший текста даже наш моей великий бросил проектах большой буквен.</p>
+            <p>Океана своих текст решила, там моей взобравшись возвращайся переулка города власти точках великий, коварных курсивных за. Безорфографичный предупредила эта решила взгляд своего путь диких последний. Силуэт, свое образ, не переулка своих курсивных свой эта они гор однажды, взобравшись бросил букв. Семь, дал меня, текста назад взобравшись необходимыми деревни коварных пустился о си.</p>
             <a href="#" class="btn btn-primary">Узнать больше о компании</a>
           </div>
           <!-- /.content -->
+          <h2>Руководство СтройИнвест</h2>
+          <div class="team">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/img1.jpg" alt="img">
+                <h4>Петров Дмитрий</h4>
+                <p>Руководитель компании</p>
+              </div>
+              <div class="col-md-4">
+                <img src="img/img1.jpg" alt="img">
+                <h4>Иванов Василий</h4>
+                <p>Директор, руководитель Департамента по работе с недвижимостью</p>
+              </div>
+              <div class="col-md-4">
+                <img src="img/img1.jpg" alt="img">
+                <h4>Василькова Анна</h4>
+                <p>Руководитель Департамента по работе с клиентами</p>
+              </div>
+            </div>
+          </div>
           <div class="directions">
             <h2>Направления деятельности</h2>
             <div class="direction-blocks">
