--- a/organization.html
+++ b/organization.html
@@ -88,13 +88,42 @@
         <!-- /.col-md-4 -->
         <div class="col-lg-8">
           <div class="content">
-            <h2>СтройИнвест</h2>
-            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит продолжил дороге даже ведущими от всех, гор что переписали правилами но эта заглавных если раз вопроса заголовок лучше страна! Проектах города заманивший языкового жаренные они, имени ведущими ему предупредила грустный маленькая залетают пустился но первую правилами моей деревни рыбного что, рукопись всеми, дорогу строчка собрал назад приставка? До ты большого маленький вопрос лучше, реторический своих приставка? Строчка предупреждал о текста.</p>
-            <p>От всех сих семь жизни. Переписывается, раз буквенных продолжил своих решила рот проектах, города ему инициал знаках запятых текстов lorem, грустный выйти имеет домах там над встретил. Живет, продолжил приставка ее рыбного знаках заманивший послушавшись домах бросил повстречался вдали безопасную? Назад, lorem переписали, напоивший текста даже наш моей великий бросил проектах большой буквенных эта не, путь дорогу заголовок осталось дороге! Над, города языком. Обеспечивает запятых рыбными дороге предупреждал заголовок рукописи проектах.</p>
-            <p>Океана своих текст решила, там моей взобравшись возвращайся переулка города власти точках великий, коварных курсивных за. Безорфографичный предупредила эта решила взгляд своего путь диких последний. Силуэт, свое образ, не переулка своих курсивных свой эта они гор однажды, взобравшись бросил букв. Семь, дал меня, текста назад взобравшись необходимыми деревни коварных пустился о силуэт предложения это до одна всемогущая жаренные заголовок своих дорогу. Там, своего мир! Ручеек живет всемогущая подзаголовок грамматики заголовок.</p>
-            <a href="#" class="btn btn-primary">Узнать больше о компании</a>
+            <h2>Структура</h2>
+            <div class="organization">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="organization-card">
+                    <a href="#" class="organization-title">Общество с ограниченной ответственностью "СтройИнвест"</a>
+                    <small>ОГРН 454656554446445 <br> ИНН 165148454664654</small>
+                    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Проектах, знаках! Всемогущая несколько своего точках ее снова грустный, предложения продолжил текстов если семантика ты подпоясал страну напоивший ему решила.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="organization-card">
+                    <a href="#" class="organization-title">Общество с ограниченной ответственностью "СтройГород</a>
+                    <small>ОГРН 454656554446445 <br> ИНН 165148454664654</small>
+                    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. На берегу напоивший образ жаренные это вскоре парадигматическая выйти диких щеке коварных рыбного за обеспечивает великий, знаках коварный, одна, даль эта.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="organization-card">
+                    <a href="#" class="organization-title">Общество с ограниченной ответственностью "ЗемляСтройИнвест</a>
+                    <small>ОГРН 454656554446445 <br> ИНН 165148454664654</small>
+                    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Домах большого города силуэт необходимыми гор буквоград живет его алфавит!</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="organization-card">
+                    <a href="#" class="organization-title">Общество с ограниченной ответственностью "Лизинг"index.html</a>
+                    <small>ОГРН 454656554446445 <br> ИНН 165148454664654</small>
+                    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Проектах, семь свой всемогущая точках текстов взгляд текстами, языком рукопись послушавшись необходимыми, прямо подпоясал свое букв себя. Над всеми ее правилами. Языкового знаках залетают города грустный буквоград несколько использовало, пустился своих страна вопроса вскоре коварных но собрал буквенных на берегу переулка.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <!-- /.content -->
+         
           <div class="directions">
             <h2>Направления деятельности</h2>
             <div class="direction-blocks">
